--- a/css/index.css
+++ b/css/index.css
@@ -123,25 +123,25 @@ span.sex.girl {
 }
 
 .bg-warp > div.bg0 {
-	background-image: url(../assets/bg0.png);
+	background-image: url(http://storage1.imgchr.com/V2U2Q.jpg);
  }
 
 .bg-warp > div.bg1 {
-	background-image: url(../assets/bg1.png);
+	background-image: url(http://storage1.imgchr.com/V2N8g.jpg);
  }
 
 .bg-warp > div.bg2 {
-	background-image: url(../assets/bg2.png);
+	background-image: url(http://storage1.imgchr.com/V2tPS.jpg);
  }
 
 .bg-warp > div.bg3 {
-	background-image: url(../assets/bg3.png);
+	background-image: url(http://storage1.imgchr.com/V2avj.jpg);
  }
 
 .bg-warp > div.bg4 {
-	background-image: url(../assets/bg4.png);
+	background-image: url(http://storage1.imgchr.com/V2wKs.jpg);
  }
 
 .bg-warp > div.bg5 {
-	background-image: url(../assets/bg5.png);
+	background-image: url(http://storage1.imgchr.com/V2Bbq.jpg);
  }
